fix card menu align

--- a/src/assets/components.css
+++ b/src/assets/components.css
@@ -30,7 +30,7 @@
 }
 
 .card-menu-row {
-    justify-content: space-between;
+    justify-content: flex-end;
     display: flex;
     margin: 10px 0px;
 }
